--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "react": "^16.5.0",
-    "react-dom": "^16.5.0",
     "react-scripts": "1.1.5"
   },
   "scripts": {
@@ -15,6 +14,9 @@
   },
   "devDependencies": {
     "enzyme": "^3.6.0",
-    "jest-cli": "^20.0.4"
+    "enzyme-adapter-react-16": "^1.5.0",
+    "jest-cli": "^20.0.4",
+    "react-dom": "^16.5.0",
+    "react-test-renderer": "^16.5.0"
   }
 }
